tests/fail/ipnet4.rs
use const_addrs::ipnet4;

fn main() {
    let _ = ipnet4!("192.168.1.1/300");
}
